--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "dayjs": "^1.11.13",
     "geist": "^1.3.0",
     "lucide-react": "^0.469.0",
     "next": "^15.0.1",
