--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.469.0",
     "next": "^15.0.1",
+    "next-cloudinary": "^6.16.0",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
