--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dayjs": "^1.11.13",
     "geist": "^1.3.0",
     "lucide-react": "^0.469.0",
+    "motion": "^11.15.0",
     "next": "^15.0.1",
     "next-cloudinary": "^6.16.0",
     "nextjs-toploader": "^3.7.15",
