--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-cloudinary": "^6.16.0",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.2.3",
+    "playwright": "^1.49.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
