--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@sparticuz/chromium": "v131.0.1",
+    "@sparticuz/chromium-min": "v131.0.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@tanstack/react-virtual": "^3.11.2",
@@ -44,6 +44,7 @@
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.2.3",
     "puppeteer": "^23.11.1",
+    "puppeteer-core": "^23.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
