--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "motion": "^11.15.0",
     "next": "^15.0.1",
     "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.2.3",
     "puppeteer": "^23.11.1",
@@ -50,6 +51,7 @@
     "react-player": "^2.16.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
+    "sonner": "^1.7.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
